changed background color to match `challenger deep` syntax theme

--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -49,7 +49,7 @@
 @app-background-color:       @base-background-color;
 
 // Base colors
-@base-background-color: #2b303b;
+@base-background-color: #1B182C;
 @base-border-color:     #3f444f;
 @base-action-color:     @oc-gray-2;
 
